Fixing search results overflow, underlining matching text

--- a/src/assets/less/site/algolia.less
+++ b/src/assets/less/site/algolia.less
@@ -1,5 +1,6 @@
 .algolia {
-  text-align: center;
+  margin-top: -20px;
+  padding-top: 49px;
   a {
     color: @text-color;
     &:hover { color: @link-hover-color; }
