--- a/src/assets/less/site/search.less
+++ b/src/assets/less/site/search.less
@@ -35,11 +35,6 @@
 #search-results {
   em {
     font-style: normal;
-    background: #1fa67a;
+    text-decoration: underline;
   }
-}
-
-.algolia {
-  margin-top: -20px;
-  padding-top: 45px;
 }
